fix: fixing bug on create product
