# routes/routes.go
@@ -57,7 +57,7 @@ func NewRoutes(ctx infra.ServiceContext) *http.Server {
 
 	dashboard := r.Group("dashboard")
 	{
-		dashboard.GET("/earning", ctx.Ctl.Dashboard.GetEerningProduct)
+		dashboard.GET("/earning", ctx.Ctl.Dashboard.GetEarningDashboard)
 		dashboard.GET("/summary", ctx.Ctl.Dashboard.GetSummary)
 		dashboard.GET("/bestSeller", ctx.Ctl.Dashboard.GetBestSeller)
 		dashboard.GET("/revenue", ctx.Ctl.Dashboard.GetMonthlyRevenue)
